redesign login and register page

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #171a21; /* Steam's dark background */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #66c0f4; /* Steam's highlight blue */
 }
 
 @keyframes App-logo-spin {
